SF Primes/src/objects/Trigger_Toggle_Profile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The profiles that are listed in this custom settings will be used in the All_Case trigger to allow trigger</description>
    <fields>
        <fullName>On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code_Reference__c</fullName>
        <label>code Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Trigger Toggle Profile</label>
</CustomObject>